# mc_integral_study

./: CMakeLists.txt  NumericalMethods.cpp  NumericalMethods.h  README.md  main.cpp  startFunctions.cpp  startFunctions.h
fparser4/: README.md
